--- a/GameProject/GameProject.vcxproj.filters
+++ b/GameProject/GameProject.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="TicTacToeForm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LeaderboardForm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LeaderForm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameMenuForm.h">
@@ -62,6 +68,15 @@
     <ClInclude Include="QuizGame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\Desktop\quiz\QuizGame\QuizGame\user.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LeaderboardForm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LeaderForm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\..\QUIZ GAME PROJECT\Bacteria GIF.gif">
@@ -73,5 +88,13 @@
     <Image Include="..\..\..\QUIZ GAME PROJECT\NEW CERTIFICATE (1).png">
       <Filter>Resource Files</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="..\..\..\..\Desktop\quiz\QuizGame\QuizGame\Leaderboard1.resx">
+      <Filter>Resource Files</Filter>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\..\..\..\Desktop\quiz\QuizGame\QuizGame\User.txt" />
   </ItemGroup>
 </Project>
